<resources>
    <string name="app_name">智课选校帝</string>
    <string name="school">院校</string>
    <string name="rank">排名</string>
    <string name="rank_type">排名大全</string>
    <string name="found">发现</string>
    <string name="news">资讯</string>
    <string name="course">课程</string>
    <string name="abroad">留学</string>
    <string name="my_qa">我的问答</string>
    <string name="qa">问答</string>
    <string name="me">我的</string>
    <string name="update_vs_now">立即更新</string>
    <string name="not_update">以后再说</string>
    <string name="analyzing">快速分析中，请稍后...</string>
    <string name="fit_type">适合你的类型：%1$s</string>
    <string name="fit_refer">可参考填报：%1$s</string>

    <string name="current">当前</string>
    <string name="version_update">版本更新</string>
    <string name="current_version">当前版本</string>
    <string name="hint_add_question">请尽可能详细的描述你的问题，不少于30字！</string>
    <string name="has_test">已有%1$s人进行了测试</string>
    <string name="for_you">%1$s对你来说</string>
    <string name="your_score">%1$d.你的【%2$s】成绩：</string>
    <string name="score_but_diff">离该校的%1$s成绩要求还差%2$s，</string>
    <string name="score_but_sug">你的%1$s成绩尚未满足该校的基本要求，想要成功申请该校，选校帝建议你快速将%2$s成绩提升至%3$s及以上。为了帮助你快速提升成绩，这些课程或许对你有帮助</string>
    <string name="score_just_right">刚好达到该校的%1$s成绩要求，</string>
    <string name="score_win_sug">已超过该校%1$s成绩要求%2$s，</string>
    <string name="score_win_rate">战胜了%1$s测试过该校的同学。</string>
    <string name="score_win_just_good">你的%1$s成绩已满足该校的基本要求，为了更好的申请该校，选校帝建议你再提升一下成绩。为了帮助你快速提升成绩，这些课程或许对你有帮助</string>
    <string name="score_win_very_good">你的%1$s成绩完全满足该校的申请要求，非常非常棒！</string>
    <string name="score_help">下列这些课程可能会给你带来一些帮助</string>
    <string name="score_website">https://www.smartstudy.com/%1$s/course</string>
    <string name="test_intro">霍兰德职业适应性测验(The Self-Directed Search，简称SDS)由美国著名职业指导专家 Ｊ.霍兰德（ＨＯＬＬＡＮＤ）编制。在几十年间经过一百多次大规模的实验研究，形成了人格类型与职业类型的学说和测验。 该测验能帮助被试者发现和确定自己的职业兴趣和能力专长, 从而科学地做出求职择业。\n\n
霍兰德在其一系列关于人格与职业关系的假设的基础上，提出了六种基本的职业类型，即：实际型、研究型、艺术型、社会型、企业型、传统型。\n\n
霍兰德职业兴趣SDS测试一般是适合于高中生，通过此测试可以让高中生确定自己的兴趣爱好，给大学的专业选择提供参考。目前我们国内的很多高中已经在实施霍兰德职业兴趣测试了，这是好的开始。如果你是大学生大一、大二的话也可以测一下，及时进行调整。</string>
    <string name="home_rank">全球大学排名&amp;专业排名</string>
    <string name="no_qq">暂未安装手机QQ或当前版本不支持应用内打开！</string>
    <string name="course_see">%1$s人观看</string>
    <string name="course_count">共 %1$s 个课时  |  </string>
    <string name="course_see_count">%1$s次观看</string>
    <string name="course_provider">本课程由%1$s提供</string>
    <string name="comment_count">评价详情（%1$s人）</string>
    <string name="abroad_time">我准备%1$d年出国留学</string>
    <string name="visa_mailcode">邮编：%1$s</string>
    <string name="visa_tel">电话：%1$s</string>
    <string name="visa_website">网址：%1$s</string>
    <string name="visa_addr">地址：%1$s</string>
    <string name="visa_area">领区：%1$s</string>
    <string name="choose_eg">选择语言成绩类别</string>
    <string name="hint_toefl">TOEFL成绩满分120</string>
    <string name="hint_ielts">IELTS成绩满分9.0</string>
    <string name="choose_test">请选标准化成绩类别</string>
    <string name="hint_sat">SAT成绩满分1600</string>
    <string name="hint_act">ACT成绩满分36</string>
    <string name="hint_gre">GRE成绩满分346</string>
    <string name="hint_gmat">GMAT成绩满分806</string>
    <string name="tip_order">请在上述时间段保持手机的畅通，我们将会有最为专业的留学老师来为你进行一对一的解答</string>
    <string name="tip_order_qa">智课拥有顶级的专家团队和海量历史成功案例，智课专注于世界名校尤其是美国名校申请，专业于让每一个学生从普通成长到优秀的留学规划</string>
    <string name="click_to_see">点击查看</string>
    <string name="msg_qa_pre">你的问题：“%1$s” 已经被人回复。</string>
    <string name="home_search_foot">更多%1$s结果(%2$s)</string>
    <string name="gpa_detail"><u>GPA算法说明</u></string>
    <string name="thematic_see">%1$s人浏览</string>


    <string name="catalyst_reloadjs">Reload</string>
    <string name="catalyst_debugjs">Debug JS Remotely</string>
    <string name="catalyst_debugjs_off">Stop Remote JS Debugging</string>
    <string name="catalyst_hot_module_replacement">Enable Hot Reloading</string>
    <string name="catalyst_hot_module_replacement_off">Disable Hot Reloading</string>
    <string name="catalyst_live_reload">Enable Live Reload</string>
    <string name="catalyst_live_reload_off">Disable Live Reload</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_off">Hide Perf Monitor</string>
    <string name="catalyst_settings">Dev Settings</string>
    <string name="catalyst_settings_title">Catalyst Dev Settings</string>
    <string name="catalyst_jsload_error">Unable to download JS bundle. Did you forget to start the development server or connect your device?</string>
    <string name="catalyst_remotedbg_message">Connecting to remote debugger</string>
    <string name="catalyst_remotedbg_error">Unable to connect with remote debugger</string>
    <string name="catalyst_element_inspector">Toggle Inspector</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_dismiss_button">Dismiss\n(ESC)</string>
    <string name="catalyst_reload_button">Reload\n(R,\u00A0R)</string>
    <string name="catalyst_poke_sampling_profiler">Start/Stop Sampling Profiler</string>
    <string name="catalyst_copy_button">Copy</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>

    <string name="catalyst_jsload_message">catalyst_jsload_message</string>
    <string name="catalyst_jsload_title">catalyst_jsload_title</string>

    </resources>
